@@ -21,14 +21,6 @@ fi
 
 AC_MSG_RESULT($from_cvs)
 
-AC_PATH_PROG(MONO, mono)
-AC_PATH_PROG(MCS, mcs)
-if test "x$MONO" = "x" ; then
-  AC_MSG_ERROR([Can't find "mono" in your PATH])
-fi
-if test "x$MCS" = "x" ; then
-  AC_MSG_ERROR([Can't find "mcs" in your PATH])
-fi
 AC_SUBST(PATH)
 AC_SUBST(LD_LIBRARY_PATH)
 
@@ -53,6 +45,7 @@ PKG_CHECK_MODULES(BASE_DEPENDENCIES, gtk+-2.0 >= $GTK_REQUIRED_VERSION gmodule-2
 PKG_CHECK_MODULES(MONO_DEPENDENCY, mono >= $MONO_REQUIRED_VERSION, has_mono=true, has_mono=false)
 
 if test "x$has_mono" = "xtrue"; then
+GENERATED_SOURCES=generated/*.cs
 AC_PATH_PROG(RUNTIME, mono, no)
 AC_PATH_PROG(CSC, mcs, no)
 if test `uname -s` = "Darwin"; then
@@ -67,12 +60,14 @@ AC_PATH_PROG(CSC, csc.exe, no)
 if test x$CSC = "xno"; then
 	AC_MSG_ERROR([You need to install either mono or .Net])
 else
+GENERATED_SOURCES=generated\\\\*.cs
 RUNTIME=
 LIB_PREFIX=
 LIB_SUFFIX=.dylib
 fi
 fi
 
+AC_SUBST(GENERATED_SOURCES)
 AC_SUBST(LIB_PREFIX)
 AC_SUBST(LIB_SUFFIX)
 
